# stella_vslam

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.cuda  Dockerfile.desktop  Dockerfile.iridescence  Dockerfile.socket
.github/workflows/: main.yml
data/trt/models/HFNet-RT/: HF-Net.cache  HF-Net.engine  HF-Net.onnx
docker/gtsam/pangolin/: Dockerfile
docker/gtsam/socket/: Dockerfile
docker/trt/Pangolin/: Dockerfile
example/: CMakeLists.txt  run_tum_rgbd_slam.cc
example/euroc/: EuRoC_mono.yaml  EuRoC_stereo.yaml
example/openloris/: openloris_rgbd.yaml
example/util/: tum_rgbd_util.cc  tum_rgbd_util.h
src/stella_vslam/: CMakeLists.txt  global_optimization_module.cc  global_optimization_module.h  mapping_module.cc  mapping_module.h  system.cc  system.h  tracking_module.cc  tracking_module.h
src/stella_vslam/camera/: base.cc
src/stella_vslam/data/: CMakeLists.txt  base_place_recognition.cpp  base_place_recognition.h  base_place_recognition_factory.h  bow_database.cc  bow_database.h  bow_vocabulary.cc  bow_vocabulary_fwd.h  frame.cc  frame.h  frame_observation.h  hf_net_database.cpp  hf_net_database.h  keyframe.cc  keyframe.h  landmark.cc  landmark.h  map_database.cc  map_database.h  odometry_type.cpp  odometry_type.hpp
src/stella_vslam/feature/: CMakeLists.txt  base_extractor.cpp  base_extractor.h  extractor_factory.h  orb_extractor.cc  orb_extractor.h  sp_extractor.cpp  sp_extractor.h  sp_trt.cpp  sp_trt.h
src/stella_vslam/feature/common_trt/: CMakeLists.txt  common.h
src/stella_vslam/hloc/: CMakeLists.txt  hf_net.cpp  hf_net.h  hloc.cpp  hloc.h  hloc_database.cpp  hloc_database.h
src/stella_vslam/io/: CMakeLists.txt  map_database_io_base.h  map_database_io_msgpack.cc  map_database_io_msgpack.h  map_database_io_sqlite3.cc  map_database_io_sqlite3.h  odometry_io.cpp  odometry_io.h
src/stella_vslam/match/: CMakeLists.txt  area.cc  base.h  bow_tree.cc  bruce_force.cpp  bruce_force.h  fuse.cc  projection.cc  projection.h  robust.cc  robust.h  super_glue.cpp  super_glue.h
src/stella_vslam/module/: CMakeLists.txt  frame_tracker.cc  frame_tracker.h  initializer.cc  initializer.h  keyframe_inserter.cc  keyframe_inserter.h  local_map_cleaner.cc  local_map_cleaner.h  local_map_updater.h  loop_bundle_adjuster.cc  loop_detector.cc  loop_detector.h  loop_detector_hloc.cpp  loop_detector_hloc.h  map_prunner.cc  map_prunner.h  relocalizer.cc  relocalizer.h  relocalizer_hloc.cpp  relocalizer_hloc.h
src/stella_vslam/module/odometry/: CMakeLists.txt  preintegration.cpp  preintegration.hpp
src/stella_vslam/optimize/: CMakeLists.txt  global_bundle_adjuster.cc  global_bundle_adjuster.h  graph_optimizer.cc  pose_optimizer.h  pose_optimizer_g2o.cc  pose_optimizer_g2o.h  sophus_utils.hpp
src/stella_vslam/optimize/internal/: CMakeLists.txt
src/stella_vslam/optimize/internal/odometry/: CMakeLists.txt  bias_random_walk_edge.cpp  bias_random_walk_edge.h  odometry_type.hpp  preintegrated_velocity_edge.cpp  preintegrated_velocity_edge.h  preintegration.hpp  vertex_bias.cpp  vertex_bias.h
src/stella_vslam/optimize/internal/se3/: dumb_perspective_factor.h  reproj_edge_wrapper.h
src/stella_vslam/publish/: frame_publisher.cc
src/stella_vslam/solve/: pnp_solver.h
src/stella_vslam/util/: CMakeLists.txt  geometry.h  sophus_utils.hpp  yaml.cc  yaml.h
test/: CMakeLists.txt
test/data/: odom.txt  openloris_rgbd.yaml
test/stella_vslam/data/: odometry_io.cc
test/stella_vslam/preintegration/: preintegration.cc
test/stella_vslam/tracking_module/: estimate.cc
viewer/: .gitignore
